# wheel2deb

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  bandit.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  wheel2deb.example.yml
.github/workflows/: build-and-push-to-docker-hub.yml  cicd.yml
docker/: Dockerfile.in  dh-autoreconf  dh-autoreconf_14_all.deb
docker/patch-jessie/: Dockerfile  dpkg-dev_1.18.25_all.deb  dpkg_1.18.25_amd64.deb  dselect_1.18.25_amd64.deb  libdpkg-dev_1.18.25_amd64.deb  libdpkg-perl_1.18.25_all.deb  tar_1.29b-1_bpo8+1_amd64.deb
src/: wheel2deb.py
src/_wheel2deb/: __init__.py  apt.py  build.py  context.py  debian.py  depends.py  entrypoints.py  logger.py  pydist.py  pyvers.py  templates.py  tools.py  utils.py  version.py
src/_wheel2deb/templates/: changelog.j2  control.j2  copyright.j2  postinst.j2  prerm.j2  rules.j2
src/wheel2deb/: __main__.py  apt.py  build.py  cli.py  context.py  debian.py  depends.py  logger.py  pydist.py  pyvers.py  templates.py  utils.py
testing/: conftest.py  test_apt.py  test_depends.py  test_parse_args.py  test_pydist.py  test_pyvers.py  test_tools.py  test_wheel2deb.py
tests/: conftest.py  test_apt.py  test_build.py  test_depends.py  test_pydist.py  test_pyvers.py  test_tools.py  test_wheel2deb.py
